--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "moment": "^2.29.3",
     "quasar": "^2.0.0",
+    "terser-webpack-plugin": "^5.3.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.16"
